# oswin-tempest-plugin

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: plugin.sh
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  index.rst  installation.rst  usage.rst
oswin_tempest_plugin/: config.py  exceptions.py  plugin.py
oswin_tempest_plugin/clients/: wsman.py
oswin_tempest_plugin/services/: gnocchi_client.py
oswin_tempest_plugin/tests/: test_base.py
oswin_tempest_plugin/tests/_mixins/: migrate.py  optional_feature.py  resize.py
oswin_tempest_plugin/tests/scenario/: test_cluster.py  test_disks.py  test_metrics_collection.py  test_qos.py  test_remotefx.py  test_secure_boot.py  test_vnuma.py
releasenotes/notes/: drop-py-2-7-9c98090411bcd207.yaml
