[metadata]
name = oswin_tempest_plugin
summary = This project contains Tempest tests to cover the os_win project, as well as a plugin to automatically load these tests into Tempest.
description-file =
    README.rst
author = Cloudbase Solutions
author-email = info@cloudbasesolutions.com
home-page = https://github.com/cloudbase/oswin_tempest_plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    oswin_tempest_plugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oswin_tempest_plugin/locale
domain = oswin_tempest_plugin

[update_catalog]
domain = oswin_tempest_plugin
output_dir = oswin_tempest_plugin/locale
input_file = oswin_tempest_plugin/locale/oswin_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oswin_tempest_plugin/locale/oswin_tempest_plugin.pot
