[metadata]
name = oswin-tempest-plugin
summary = This project contains Tempest tests to cover the os_win project, as well as a plugin to automatically load these tests into Tempest.
description-file =
    README.rst
author = Cloudbase Solutions
author-email = info@cloudbasesolutions.com
home-page = https://opendev.org/openstack/oswin-tempest-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    oswin_tempest_plugin

[entry_points]
tempest.test_plugins =
    oswin_tempest_plugin = oswin_tempest_plugin.plugin:OSWinTempestPlugin
